<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="drawer_menu_dashboard">Dashboard</string>
    <string name="drawer_menu_statement">Statement</string>
    <string name="drawer_menu_invoices">Invoices</string>
    <string name="drawer_menu_withdrawal">Withdrawal</string>
    <string name="drawer_menu_exchange">Exchange</string>
    <string name="drawer_menu_support">Support</string>
    <string name="drawer_menu_logout">Log out</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_statement">Statement</string>
    <string name="title_invoices">Invoices</string>
    <string name="title_withdrawal">Funds withdrawal</string>
    <string name="title_exchange">Currency exchange</string>
    <string name="title_support">Support</string>
    <string name="title_logout">Log out</string>
    <string name="drawer_title">Navigation</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="output">Withdrawal</string>
    <string name="transaction_type_withdrawal">Withdrawal</string>
    <string name="transaction_type_transfer_nn">Transfer #%1s</string>
    <string name="transaction_type_exchange_nn">Exchange #%1s</string>
    <string name="login">Telephone or e-mail</string>
    <string name="password">Password</string>
    <string name="logo_text">For business</string>
    <string name="login_button">Log in</string>
    <string name="paid">Paid</string>
    <string name="not_paid">Not paid</string>
    <string name="partially">Partially paid</string>
    <string name="bill">Invoice</string>
    <string name="currency">Currency</string>
    <string name="rus_rubl">Russian rouble</string>
    <string name="descr">Description</string>
    <string name="exampl_pizza">Pizza delivery, for example</string>
    <string name="tel_recipient">Recipient telephone number or email</string>
    <string name="mail_or_tel">my@mail.ru or 89031234567</string>
    <string name="sum">Amount</string>
    <string name="enter_amount">Input amount</string>
    <string name="error_input_field_must_no_be_empty">The input field must not be empty!</string>
    <string name="error_enter_email_or_phone">Enter an email or phone</string>
    <string name="entrance">Inpayment</string>
    <string name="invoice_issued_successfully">Invoice in amount of %1s issued successfully</string>
    <string name="sum_commis">Amount including commission</string>
    <string name="sum_output">Amount to withdraw</string>
    <string name="remove">Withdraw</string>
    <string name="last_oper">Latest transfer</string>
    <string name="hour_24">24 hours</string>
    <string name="week">week</string>
    <string name="month">month</string>
    <string name="error_invalid_email_or_phone">Invalid e-mail or telephone</string>
    <string name="entered_password_incorrect">Entered password is incorrect</string>
    <string name="forgot">Send</string>
    <string name="data_load">Data will be load</string>
    <string name="loading">Loading…</string>
    <string name="inputs">Incoming funds</string>
    <string name="outputs">Outgoing funds</string>
    <string name="sum_period">Amount for a period %s</string>
    <string name="comis_period">commission for a period %s</string>
    <string name="begin_date">Start date</string>
    <string name="next">Next</string>
    <string name="go_back">Back</string>
    <string name="end_date">End date</string>
    <string name="cancel">Cancel</string>
    <string name="clear_field">Clear</string>
    <string name="commission_free">Commission-free</string>
    <string name="commission_cost">Commission: $cost.</string>
    <string name="commission_rate_xx">Commission: $rate.</string>
    <string name="commission_rate_xx_max_yy">Commission: $rate, but not more than $to.</string>
    <string name="commission_rate_xx_min_yy">Commission: $rate, but not less than $from.</string>
    <string name="commission_rate_xx_from_yy_to_zz">Commission: $rate, from $from to $to.</string>
    <string name="commission_rate_xx_cost_nn">Commission: $rate plus $cost.</string>
    <string name="commission_rate_xx_cost_nn_max_zz">Commission: $rate plus $cost, but not more than $to.</string>
    <string name="commission_rate_xx_cost_nn_min_yy">Commission: $rate plus $cost, but not less than $from.</string>
    <string name="commission_rate_xx_cost_nn_min_yy_max_zz">Commission: $rate plus $cost, from $from to $to.</string>
    <string name="amount_from_xx">Amount from $from.</string>
    <string name="amount_to_yy">Amount is up to $to.</string>
    <string name="amount_from_xx_to_yy">Amount from $from to $to.</string>
    <string name="payment_one">The payment will be made once %1$s at %2$s</string>
    <string name="payment_begin">Payment will be made %1$s at %2$s, starting from %3$s</string>
    <string name="payment_begin_end">The payment will be made on %1$s at %2$s, starting from %3$s, till %4$s at %5$s</string>
    <string name="first_day">on the first day of the month</string>
    <string name="last_day">on the last day of the month</string>
    <string name="n_day">on the %1$s day of the month</string>
    <string name="daily">everyday</string>
    <string name="weekly">every week</string>
    <string name="monthly">every month</string>
    <string name="yearly" tools:ignore="UnusedResources">every year</string>
    <string name="on_">on %1$s</string>
    <string name="monday">mondays</string>
    <string name="tuesday">tuesdays</string>
    <string name="wednesday">wednesdays</string>
    <string name="thursday">thursdays</string>
    <string name="friday">fridays</string>
    <string name="saturday">saturdays</string>
    <string name="sunday">sundays</string>
    <string name="search_invoice">Search invoice</string>
    <string name="warning">Warning</string>
    <string name="exit_message">Are you sure you want to log out?</string>
    <string name="sure_withdraw">Are you sure \n you want to withdraw</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="button_continue">Continue</string>
    <string name="awaiting">Awaiting for crediting</string>
    <string name="canceled">Canceled</string>
    <string name="processing">Processing</string>
    <string name="search_invoice_hint">Search invoice…</string>
    <string name="search_transaction_hint">Search transaction…</string>
    <string-array name="month_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="month_array_cut">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="day_of_week">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
    <string name="moment_ago">Moment ago</string>
    <string name="min_ago">minutes ago</string>
    <string name="min_ago2">minutes ago</string>
    <string name="min_ago3">minutes ago</string>
    <string name="hour_ago">Hour ago</string>
    <string name="hour_ago1">hours ago</string>
    <string name="hour_ago2">hours ago</string>
    <string name="hour_ago3">hour ago</string>
    <string name="sent_new_password">One-time password has been sent to %s.</string>
    <string name="sent_new_password_on_phone">One-time password has been sent to phone number %s.</string>
    <string name="failed_to_send_one_time_password">Failed to send one-time password. Please try again later</string>
    <string name="balance">Balance %s</string>
    <string name="no_inet">Check your internet connection</string>
    <string name="hour_cut">h.</string>
    <string name="session_timeout">Session is expired</string>
    <string name="payment_error">This transaction cannot be processed at this time. Please try again later</string>
    <string name="transact_proces">Transaction in amount of %1$s is processed</string>
    <string name="title_activity_ticket_list">Customer care</string>
    <string name="you_havent_started_any_conversations">You haven\'t started any conversations yet</string>
    <string name="start_conversation">Start conversation</string>
    <string name="load_ticket_list_error">Failed to load conversations. Please try again later</string>
    <string name="title_activity_conversation">Conversation</string>
    <string name="no_transfers">No transfers</string>
    <string name="no_invoices">No invoices</string>
    <string name="hello_how_can_we_help_you_message">Hello, how can we help you?</string>
    <string name="send_button_short">Send</string>
    <string name="your_message_hint">Your message</string>
    <string name="send_message_hint">Send message</string>
    <string name="load_ticket_error">Failed to load conversation. Please try again later</string>
    <string name="send_message_error">Failed to send message. Please try again later</string>
    <string name="attach_button">Attach</string>
    <string name="pick_from_gallery">Pick image from gallery</string>
    <string name="take_photo">Take photo</string>
    <string name="error_camera_not_available">Camera not available</string>
    <string name="error_no_place_to_save">Low disk space</string>
    <string name="remove_attachment">Remove this attachment</string>
    <string name="error_you_must_enter_the_verification_code">You must enter the verification code</string>
    <string name="enter_captcha_hint">Enter the text you see in the picture</string>
    <string name="network_error">Network error. Please try again later</string>
    <string name="enter_captcha_error">Please enter code from image</string>
    <string name="refresh">Refresh</string>
    <string name="error_captcha_wrong_code">Wrong code. Please try again.</string>
    <string name="error_auth_principal">Authentification error</string>
    <string name="recipient_title">Recipient title</string>
    <string name="from_wallet">From wallet</string>
    <string name="transaction_id">Transaction id</string>
    <string name="sender_title">Sender title</string>
    <string name="to_wallet">To wallet</string>
    <string name="commission">Commission</string>
    <string name="description">Description</string>
    <string name="last_edit_date">Last edit date</string>
    <string name="transaction_status">Transaction status</string>
    <string name="operation_id">Operation id</string>
    <string name="invoice_title_invoice_id">Transaction id set by system</string>
    <string name="invoice_title_from_user_id">Sender id</string>
    <string name="invoice_title_to_user_id">Recipient id</string>
    <string name="invoice_title_user_id">Contractor id</string>
    <string name="invoice_title_user_title">Contractor title</string>
    <string name="invoice_title_direction">Invoice direction</string>
    <string name="invoice_title_amount">Amount</string>
    <string name="invoice_title_currency">Currency</string>
    <string name="invoice_title_order_id">External account id, known only to sender</string>
    <string name="invoice_title_description">Invoice description</string>
    <string name="invoice_title_create_date">Date of invoice</string>
    <string name="invoice_title_update_date">Last edit date</string>
    <string name="invoice_title_expire_date">Invoice expiration date</string>
</resources>