<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >
    
	<LinearLayout 
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:background="#FFFFFF"
    	android:orientation="horizontal" >
    	<ImageView 
	    	android:id="@+id/ivBack"
	    	android:layout_margin="20dp"
	    	android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/icon_back" />
	    <TextView 
	    	android:id="@+id/tvBill"
	    	android:text="@string/bill"
	    	android:textSize="10pt"
	    	android:layout_gravity="center_horizontal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
    </LinearLayout>
    
		<ImageView 
		    android:id="@+id/ivAccountIcon"
		    android:layout_margin="5dp"
		    android:scaleType="fitCenter"
		    android:layout_gravity="center_horizontal"
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/icon_ok" />
			
		<TextView 
		    	android:id="@+id/tvCurrency"
		    	android:text="@string/currency"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		
		<TextView 
		    	android:id="@+id/tvCurrencyName"
		    	android:text="@string/rus_rubl"
		    	android:textSize="10pt"
		    	android:lineSpacingMultiplier="1.5"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		
		<TextView 
		    	android:id="@+id/tvDescr"
		    	android:text="@string/descr"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		
		<EditText 
		    	android:id="@+id/etDescrText"
		    	android:hint="@string/exampl_pizza"
		    	android:textSize="10pt"
		    	android:lineSpacingMultiplier="1.5"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		
		<TextView 
		    	android:id="@+id/tvTelRecipient"
		    	android:text="@string/tel_recipient"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		
		<EditText 
		    	android:id="@+id/etTelRecipient"
		    	android:hint="@string/mail_or_tel"
		    	android:textSize="10pt"
		    	android:lineSpacingMultiplier="1.5"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		
		<TextView 
		    	android:id="@+id/tvSum"
		    	android:text="@string/sum"
		    	android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		
		<EditText 
		    	android:id="@+id/etSum"
		    	android:hint="@string/enter_amount"
		    	android:textSize="10pt"
		    	android:inputType="number"
		    	android:lineSpacingMultiplier="1.5"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		<TextView 
		    	android:id="@+id/tvBillButton"
		    	android:text="@string/bill"
		    	android:textSize="10pt"
		    	android:textColor="#f00"
		    	android:layout_gravity="center_horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
</LinearLayout>
