<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="fill_parent" >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical" >
    
	<LinearLayout 
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:background="#FFFFFF"
    	android:orientation="horizontal" >
    	<ImageView 
	    	android:id="@+id/ivBack"
	    	android:layout_margin="20dp"
	    	android:layout_width="30dp"
			android:layout_height="30dp"
			android:src="@drawable/ic_menu_back" />
	    <TextView 
	    	android:id="@+id/tvBill"
	    	android:text="@string/bill"
	    	android:textSize="10pt"
	    	android:layout_gravity="center_vertical"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

	    <ProgressBar
	        android:id="@+id/pbInvoice"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="10dp"
	        android:visibility="invisible" />

    </LinearLayout>
    
		<ImageView 
		    android:id="@+id/ivAccountIcon"
		    android:layout_margin="5dp"
		    android:scaleType="fitCenter"
		    android:layout_gravity="center_horizontal"
		    android:layout_width="100dp"
			android:layout_height="100dp"
			android:src="@drawable/icon_ok_big" />
			
		<TextView 
		    	android:text="@string/currency"
		    	android:textColor="#757575"
		    	android:layout_marginTop="10dp"
		    	android:layout_marginLeft="15dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		
		<TextView 
		    	android:id="@+id/tvCurrencyName"
		    	android:text="@string/rus_rubl"
		    	android:textSize="10pt"
		    	android:layout_marginLeft="15dp"
		    	android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		
		<TextView 
		    	android:text="@string/descr"
		    	android:textColor="#757575"
		    	android:layout_marginTop="10dp"
		    	android:layout_marginLeft="15dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		
		<AutoCompleteTextView 
		    	android:id="@+id/actvDescr"
		    	android:hint="@string/exampl_pizza"
		    	android:textSize="10pt"
		    	android:layout_marginLeft="10dp"
		    	android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		
		<TextView 
		    	android:text="@string/tel_recipient"
		    	android:textColor="#757575"
		    	android:layout_marginTop="10dp"
		    	android:layout_marginLeft="15dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		
		<AutoCompleteTextView 
		    	android:id="@+id/actvTelEmail"
		    	android:hint="@string/mail_or_tel"
		    	android:textSize="10pt"
		    	android:layout_marginLeft="10dp"
		    	android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		
		<TextView 
		    	android:text="@string/sum"
		    	android:textColor="#757575"
		    	android:layout_marginTop="10dp"
		    	android:layout_marginLeft="15dp"
		    	android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		
		<ru.bokus.w1.ViewExtended.EditTextRouble 
		    	android:id="@+id/etSum"
		    	android:hint="@string/enter_amount"
		    	android:textSize="10pt"
		    	android:layout_marginLeft="10dp"
		    	android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		
		<TextView 
		    	android:id="@+id/tvBillButton"
		    	android:text="@string/bill"
		    	android:textSize="10pt"
		    	android:textColor="#f00"
		    	android:layout_marginTop="20dp"
		    	android:layout_marginLeft="5dp"
		    	android:layout_gravity="center_horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
</LinearLayout>
</ScrollView>
