<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            layout="@layout/include_ab2"
            android:id="@+id/toolbar"/>

        <ImageView
            android:id="@+id/ivAccountIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_below="@id/toolbar"
            android:layout_centerHorizontal="true"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_ok_big"
            tools:ignore="ContentDescription"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/currency_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/ivAccountIcon"
            android:text="@string/currency"
            android:textColor="#757575" />

        <TextView
            android:id="@+id/tvCurrencyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_below="@id/currency_title"
            android:text="@string/rus_rubl"
            android:textSize="10pt" />

        <TextView
            android:id="@+id/description_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="12dp"
            android:layout_below="@id/tvCurrencyName"
            android:text="@string/descr"
            android:textColor="#757575" />

        <AutoCompleteTextView
            android:id="@+id/actvDescr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_below="@id/description_title"
            android:hint="@string/exampl_pizza"
            android:imeOptions="actionNext"
            android:textSize="19sp"
            android:singleLine="true"
            android:minHeight="40dp" />

        <TextView
            android:id="@+id/recipient_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="16dp"
            android:layout_below="@id/actvDescr"
            android:text="@string/tel_recipient"
            android:textColor="#757575" />

        <AutoCompleteTextView
            android:id="@+id/actvTelEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_below="@id/recipient_title"
            android:hint="@string/mail_or_tel"
            android:imeOptions="actionNext"
            android:textSize="19sp"
            android:singleLine="true"
            android:textIsSelectable="false"
            android:minHeight="40dp" />

        <TextView
            android:id="@+id/amount_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="16dp"
            android:layout_below="@id/actvTelEmail"
            android:text="@string/sum"
            android:textColor="#757575" />

        <EditText
            android:id="@+id/etSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_below="@id/amount_title"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:hint="@string/enter_amount"
            android:includeFontPadding="false"
            android:textSize="19sp"
            android:singleLine="true" />

        <TextView
            android:id="@+id/tvBillButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_below="@id/etSum"
            android:layout_centerHorizontal="true"
            style="@style/PositiveRedButton"
            android:text="@string/bill"
            android:layout_marginBottom="20dp" />
    </RelativeLayout>
</ScrollView>
