<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->


<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ActionBarToolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foreground="@drawable/header_shadow">

            <FrameLayout
                android:id="@+id/content_frame"
                android:foreground="?android:windowContentOverlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ProgressBar
                android:id="@+id/progress"
                style="?android:progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-6dp"
                android:indeterminate="true"
                android:visibility="invisible"
                tools:visibility="visible" />
        </FrameLayout>
    </LinearLayout>

    <!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         The drawer is given a fixed width in dp and extends the full height of
         the container. A solid background is used for contrast
         with the content view. -->
    <ScrollView
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:layout_gravity="start"
        android:fadingEdge="none"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/left_drawer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/navdrawer_background"
            android:orientation="vertical">

            <include layout="@layout/include_drawer_header" />

            <LinearLayout
                android:id="@+id/drawer_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/drawer_menu_dashboard"
                    style="@style/DrawerMenuItemStyle"
                    android:drawableLeft="@drawable/menu_dashboard"
                    android:text="@string/drawer_menu_dashboard" />

                <TextView
                    android:id="@+id/drawer_menu_invoices"
                    style="@style/DrawerMenuItemStyle"
                    android:drawableLeft="@drawable/menu_account"
                    android:text="@string/drawer_menu_invoices" />

                <TextView
                    android:id="@+id/drawer_menu_statement"
                    style="@style/DrawerMenuItemStyle"
                    android:drawableLeft="@drawable/menu_check"
                    android:text="@string/drawer_menu_statement" />

                <TextView
                    android:id="@+id/drawer_menu_withdrawal"
                    style="@style/DrawerMenuItemStyle"
                    android:drawableLeft="@drawable/menu_output"
                    android:text="@string/drawer_menu_withdrawal" />

                <TextView
                    android:id="@+id/drawer_menu_exchange"
                    style="@style/DrawerMenuItemStyle"
                    android:drawableLeft="@drawable/menu_exchange"
                    android:text="@string/drawer_menu_exchange" />

                <TextView
                    android:id="@+id/drawer_menu_support"
                    style="@style/DrawerMenuItemStyle"
                    android:drawableLeft="@drawable/menu_support"
                    android:text="@string/drawer_menu_support" />

                <TextView
                    android:id="@+id/drawer_menu_logout"
                    style="@style/DrawerMenuItemStyle"
                    android:drawableLeft="@drawable/menu_settings"
                    android:text="@string/drawer_menu_logout" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</android.support.v4.widget.DrawerLayout>
